# cosmolex-mcp

./: .env.example  .gitignore  README.md  endpoints.yaml  logging_config.py  pyproject.toml
.github/workflows/: gitleaks.yml
cosmolex_mcp/: client.py  credentials.py  server.py
cosmolex_mcp/setup/: __init__.py  __main__.py  oauth_flow.py  verify.py
tests/: README.md  config.py  read_smoke.py  write_test.py
