[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmolex-mcp"
version = "0.2.1"
description = "MCP server for CosmoLex — ProfitSolv LCS /v1 Integration API (scoped OAuth)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cosmolex", "mcp", "legal", "law", "claude", "practice-management"]
dependencies = [
    "mcp>=1.27.2,<2",
    "requests>=2.34.2",
    "keyring>=24.0.0",
]

[project.scripts]
cosmolex-mcp = "cosmolex_mcp.server:main"
cosmolex-mcp-setup = "cosmolex_mcp.setup.oauth_flow:main"
cosmolex-mcp-verify = "cosmolex_mcp.setup.verify:main"

[project.urls]
Homepage = "https://github.com/RosenAdvertising/cosmolex-mcp"
Issues = "https://github.com/RosenAdvertising/cosmolex-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["cosmolex_mcp"]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "dist", "build"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
